# Firefly

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: ConfigureCompiler.cmake  DefineVersion.cmake  SingersModuleMacros.cmake
devtools/static-analysis/cppcheck/: CMakeLists.txt
docs/developer/doxygen/: doxyfile.in  mainpage.txt
qt/: CMakeLists.txt
qt/widgets/: CMakeLists.txt  PersonWidget.cpp  PersonWidget.h  SingersQtWidgetsModule.h
qt/widgets/wrapping/python/: CMakeLists.txt  pyqtwidgets.sip
singers/datamodel/: CMakeLists.txt  Person.cpp  Person.h  SingersDataModelModule.h
singers/datamodel/testing/cxx/: CMakeLists.txt  PersonTest.h
